k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 102080400969.dkr.ecr.ap-south-1.amazonaws.com/expense-backend:latest
        ports:
        - containerPort: 8080
